<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegistrationActivity"
    android:background="@color/mainColor"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextFirstNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_first_name"
            android:theme="@style/SecondaryTextTheme"
            android:textColorHint="@color/cardWhite"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="30sp"/>


        <EditText
            android:id="@+id/editTextLastNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_last_name"
            android:gravity="center"
            android:theme="@style/SecondaryTextTheme"
            android:textColorHint="@color/cardWhite"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="30sp"/>


    </LinearLayout>


    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:gravity="center"
        android:theme="@style/SecondaryTextTheme"
        android:textColorHint="@color/cardWhite"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"/>


    <EditText
        android:id="@+id/editTextUsernameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:gravity="center"
        android:theme="@style/SecondaryTextTheme"
        android:textColorHint="@color/cardWhite"
        android:textSize="18sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/editTextPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:text=""
        android:gravity="center"
        android:theme="@style/SecondaryTextTheme"
        android:textColorHint="@color/cardWhite"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"/>


    <EditText
        android:id="@+id/editTextConfirmPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:gravity="center"
        android:theme="@style/SecondaryTextTheme"
        android:textColorHint="@color/cardWhite"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        android:textSize="16sp"
        android:text="@string/btn_next"
        android:theme="@style/LightButtonsTheme"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"/>





</LinearLayout>