<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegistrationActivity"
    android:background="@color/mainColor"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewPhotoReg"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@mipmap/default_profile_image"/>

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_height="40sp"
            android:text="@string/btn_choose_image"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="40sp"
            android:theme="@style/LightButtonsTheme"
            />


    </LinearLayout>



    <EditText
        android:id="@+id/editTextLocationReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location"
        android:gravity="center"
        android:textSize="16sp"
        android:theme="@style/SecondaryTextTheme"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/cardWhite"/>

    <Button
        android:id="@+id/btnChooseCategory"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:text="@string/btn_choose_category"
        android:layout_marginTop="20sp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"
        android:theme="@style/LightButtonsTheme"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_theme_profile"
            android:theme="@style/SecondaryTextTheme"
            android:textSize="16sp"
            android:layout_marginEnd="10sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/themeRbtn1"
                android:layout_width="50sp"
                android:layout_height="25sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/profile_bar2_active"
                android:button="@drawable/profile_theme_radiobutton"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/themeRbtn2"
                android:layout_width="50sp"
                android:layout_height="25sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/profile_bar3"
                android:button="@drawable/profile_theme_radiobutton"/>

            <RadioButton
                android:id="@+id/themeRbtn3"
                android:layout_width="50sp"
                android:layout_height="25sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/profile_bar4"
                android:button="@drawable/profile_theme_radiobutton"/>


        </RadioGroup>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_who_can_see_favourite"
            android:theme="@style/SecondaryTextTheme"
            android:textSize="16sp"
            android:layout_marginEnd="10sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5sp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rbtnFavouriteJustMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rbtn_just_me"
                android:textColorHint="@color/cardWhite"
                android:theme="@style/SecondaryTextTheme"
                android:checked="true"
                android:layout_marginEnd="10sp"/>

            <RadioButton
                android:id="@+id/rbtnFavouriteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/rbtn_all_users"
                android:textColorHint="@color/cardWhite"
                android:theme="@style/SecondaryTextTheme"
                android:checked="false"/>




        </RadioGroup>


    </LinearLayout>



    <EditText
        android:id="@+id/editTextAboutMeReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_about_me"
        android:gravity="center"
        android:textSize="16sp"
        android:theme="@style/SecondaryTextTheme"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/cardWhite"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"
        android:layout_marginTop="20sp">


        <Button
            android:id="@+id/btnFinishReg"
            android:layout_width="0sp"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/btn_finish"
            android:theme="@style/LightButtonsTheme"/>


    </LinearLayout>






</LinearLayout>