<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ProfilePage.ProfileDescriptionFragment">


    <LinearLayout
        android:id="@+id/buttonsLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnSubscribe"
                android:layout_width="105sp"
                android:layout_height="wrap_content"
                android:text="@string/btn_subscribe"
                android:textSize="11sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/cardColor"
                android:theme="@style/MainTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center">



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnSendMessage"
                android:layout_width="105sp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="11sp"
                android:text="@string/btn_send"
                android:background="@color/cardColor"
                android:theme="@style/MainTextTheme"/>
        </LinearLayout>
    </LinearLayout>





    <LinearLayout
        android:id="@+id/accountInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonsLayout"
        android:orientation="vertical"
        android:gravity="center">



        <TextView
            android:id="@+id/profileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:theme="@style/MainTextTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/followingLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_count_value"
                    android:layout_marginEnd="3dp"
                    android:theme="@style/MainTextTheme"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_following"
                    android:theme="@style/MainTextTheme"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:id="@+id/countPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_count_value"
                    android:layout_marginEnd="3dp"
                    android:theme="@style/MainTextTheme"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_posts"
                    android:theme="@style/MainTextTheme"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/followersLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_count_value"
                    android:layout_marginEnd="3dp"
                    android:theme="@style/MainTextTheme"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_followers"
                    android:theme="@style/MainTextTheme"/>

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountInformation"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_name"
                android:theme="@style/MainTextTheme"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/nameInformationProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:theme="@style/MainTextTheme"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_location"
                android:layout_gravity="center"
                android:gravity="center"
                android:theme="@style/MainTextTheme"/>

            <TextView
                android:id="@+id/locationInformationProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:theme="@style/MainTextTheme"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_gengre"
                android:layout_gravity="center"
                android:gravity="center"
                android:theme="@style/MainTextTheme"/>

            <TextView
                android:id="@+id/categoryInformationProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:theme="@style/MainTextTheme"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_about_me"
                android:layout_gravity="center"
                android:gravity="center"
                android:theme="@style/MainTextTheme"/>

            <TextView
                android:id="@+id/aboutMeInformationProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:theme="@style/MainTextTheme"/>
        </LinearLayout>



    </LinearLayout>


    </LinearLayout>



</RelativeLayout>